# rust-bot

./: .gitignore  Cargo.toml  README.md
src/: basics.rs  command.rs  console.rs  fix.rs  lib.rs  logger.rs  reactor.rs  websocket.rs
src/basics/: action.rs  card.rs  clue.rs  clue_result.rs  endgame.rs  game.rs  identity_set.rs  player.rs  state.rs  util.rs  variant.rs
src/basics/endgame/: winnable.rs
src/basics/game/: frame.rs
src/basics/player/: elim.rs
src/reactor/: interpret_clue.rs  interpret_reaction.rs  state_eval.rs
tests/: behaviour.rs  convs.rs  empathy.rs  endgame.rs  good_touch.rs  reactor.rs
tests/ex_asserts/: mod.rs
tests/reactor/: invert.rs  mistakes.rs  mod.rs  reactive.rs  stable.rs  stalling.rs  variants.rs
tests/util/: mod.rs
