[package]
name = "rust_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenvy = "0.15.7"
futures = "0.3"
itertools = "0.14.0"
log = "0.4.27"
rand = "0.9.1"
rand_chacha = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

[lints.clippy]
tabs_in_doc_comments = "allow"
